hphp/hack/test/typecheck/sealed/no_functions_01.php
<?hh

<<file: __EnableUnstableFeatures('sealed_methods')>>

<<__Sealed(D::class)>>
function foo(): void {}
